--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     //Scalable dp
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+
 
 }
 
