--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-feature android:name="android.hardware.camera" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GP">
-        <activity android:name=".Home.Zhaimer"></activity>
+        <activity android:name=".Home.Gallery.GalleryActivity"></activity>
+        <activity android:name=".Home.Zhaimer" />
         <activity android:name=".Home.HomePage" />
         <activity android:name=".Auth.EditProfile" />
         <activity android:name=".Auth.Signup" />
